kubernetes/ingress/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: ucsf-app.cloud.okteto.net
      http:
        paths:
          - backend:
              serviceName: wordpress
              servicePort: 80
            path: /
  tls:
    - hosts:
        - ucsf-app.cloud.okteto.net
